# django_ex

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
django_ex/auththen/: apps.py  serializers.py  urls.py  views.py
django_ex/car/: admin.py  models.py  serializers.py  urls.py  views.py
django_ex/car/migrations/: 0001_initial.py  0002_car_created_at_car_updated_at.py
django_ex/django_ex/: asgi.py  settings.py  urls.py  wsgi.py
django_ex/polls/: views.py
django_ex/polls/migrations/: 0001_initial.py
django_ex/snippets/: admin.py  models.py  serializers.py  urls.py  views.py
django_ex/snippets/migrations/: 0001_initial.py
django_ex/static/polls/: style.css
django_ex/templates/: base.html
django_ex/templates/polls/: detail.html  index.html  results.html
django_ex/templates/translate/: index.html
django_ex/translate/: trans.py  urls.py  views.py
django_ex/users/: serializers.py  urls.py  views.py
